--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyAppt">
         <activity
+            android:name=".Messages_From_Patients"
+            android:exported="false" />
+        <activity
             android:name=".Chattingpage"
             android:exported="false" />
         <activity
