--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyAppt">
         <activity
+            android:name=".Patient_Main_Page_NEW"
+            android:exported="false" />
+        <activity
             android:name=".Patient_Main_Page_Activity"
             android:exported="false"
             android:label="@string/title_activity_patient_main_page" />
