--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyAppt">
         <activity
+            android:name=".Doctor_Main_Page_NEW"
+            android:exported="false" />
+        <activity
             android:name=".Doctor_View_Appointments_NEW"
             android:exported="false" />
         <activity
