--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyAppt">
         <activity
+            android:name=".Login_Activity"
+            android:exported="false" />
+        <activity
             android:name=".Launcher_Screen"
             android:exported="true">
             <intent-filter>
@@ -72,7 +75,6 @@
         <activity android:name=".userCode" />
         <activity android:name=".doctorRegistration" />
         <activity android:name=".askuseroccupation" />
-
     </application>
 
 </manifest>
