--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.example.my_hospital_appointments">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.REQUEST_ACTIVITY_RECOGNITION"/>
+
 
     <application
         android:allowBackup="true"
@@ -11,6 +13,9 @@
         android:roundIcon="@mipmap/mylaunchericon_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyAppt">
+        <activity
+            android:name=".Forgot_Password_Activity"
+            android:exported="false" />
         <activity
             android:name=".Login_Activity"
             android:exported="false" />
