--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -80,6 +80,10 @@
         <activity android:name=".userCode" />
         <activity android:name=".doctorRegistration" />
         <activity android:name=".askuseroccupation" />
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
