--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyAppt">
         <activity
+            android:name=".PatientUploadPicActivity"
+            android:exported="false" />
+        <activity
             android:name=".Patient_User_Profile_Activity"
             android:exported="false" />
         <activity
